--- a/Banmai/report/Financial.rdlc
+++ b/Banmai/report/Financial.rdlc
@@ -751,21 +751,13 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>ทุนบัญชี</Value>
+                    <Value>ทุนบัญชีประชารัฐ</Value>
                     <Style>
                       <FontStyle>Normal</FontStyle>
                       <FontFamily>Angsana New</FontFamily>
                       <FontSize>14pt</FontSize>
                       <FontWeight>Normal</FontWeight>
                       <TextDecoration>None</TextDecoration>
-                    </Style>
-                  </TextRun>
-                  <TextRun>
-                    <Value>=Fields!acc_name.Value</Value>
-                    <Style>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>14pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
                     </Style>
                   </TextRun>
                 </TextRuns>
