--- a/Banmai/report/LoanReport1.rdlc
+++ b/Banmai/report/LoanReport1.rdlc
@@ -1210,12 +1210,176 @@
                   <LineHeight>12pt</LineHeight>
                 </Style>
               </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>ข้อ 9.) ในกรณีที่ผู้กู้เปลี่ยนชื่อตัว ชื่อสกุล หรือเปลี่ยนแปลงที่อยู่ หรือย้ายทะเบียนบ้าน ผู้กู้จะต้องแจ้งให้คณะกรรมการ</Value>
+                    <Style>
+                      <FontStyle>Normal</FontStyle>
+                      <FontFamily>Angsana New</FontFamily>
+                      <FontSize>12pt</FontSize>
+                      <FontWeight>Normal</FontWeight>
+                      <Format>0.00;(0.00)</Format>
+                      <TextDecoration>None</TextDecoration>
+                      <Color>#000000</Color>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <ListLevel>1</ListLevel>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                  <LineHeight>12pt</LineHeight>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>กองทุนฯทราบโดยเร็ว</Value>
+                    <Style>
+                      <FontStyle>Normal</FontStyle>
+                      <FontFamily>Angsana New</FontFamily>
+                      <FontSize>12pt</FontSize>
+                      <FontWeight>Normal</FontWeight>
+                      <Format>0.00;(0.00)</Format>
+                      <TextDecoration>None</TextDecoration>
+                      <Color>#000000</Color>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                  <LineHeight>12pt</LineHeight>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>ข้อ 10.) หากผู้กู้ผิดนัดงวดใดงวดหนึ่งหรือผิดสัญญาข้อหนึ่งข้อใดแห่งสัญญานี้ ผู้กู้ยินยอมให้ถือว่าผู้กู้ผิดนัดทั้งหมด</Value>
+                    <Style>
+                      <FontStyle>Normal</FontStyle>
+                      <FontFamily>Angsana New</FontFamily>
+                      <FontSize>12pt</FontSize>
+                      <FontWeight>Normal</FontWeight>
+                      <Format>0.00;(0.00)</Format>
+                      <TextDecoration>None</TextDecoration>
+                      <Color>#000000</Color>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <HangingIndent>0.5in</HangingIndent>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                  <LineHeight>12pt</LineHeight>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>ในสัญญานี้และยินยอมให้ผู้ให้กู้คิดดอกเบี้ยในระหว่างผิดนัดได้ ในอัตราสูงสุดที่ชอบด้วยกฎหมายนับแต่วันที่ผิดนัดเป็นต้นไปจนกว่าผู้กู้จะชำระหนี้คืนให้แก่ผู้ให้กู้ครบถ้วนสิ้นเชิงและผู้กู้ยินยอมชดใช้ค่าเสียหายทั้งปวงที่ผู้ให้กู้ต้องเสียไปในการบังคับให้ผู้กู้ชำระหนี้ตามสัญญานี้ ซึ่งรวมถึงค่าใช้จ่ายในการเตือน เรียกร้อง ทวงถาม การดำเนินคดีและการบังคับคดี</Value>
+                    <Style>
+                      <FontStyle>Normal</FontStyle>
+                      <FontFamily>Angsana New</FontFamily>
+                      <FontSize>12pt</FontSize>
+                      <FontWeight>Normal</FontWeight>
+                      <Format>0.00;(0.00)</Format>
+                      <TextDecoration>None</TextDecoration>
+                      <Color>#000000</Color>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                  <LineHeight>12pt</LineHeight>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>ข้อ 11.) ในกรณีที่ผู้กู้ผิดนัดชำระหนี้หรือผู้กู้เสียชีวิตและยังคงมีหนี้ค้างชำระกับทางผู้ให้กู้ หากผู้กู้มีเงินออม เงินหุ้น </Value>
+                    <Style>
+                      <FontStyle>Normal</FontStyle>
+                      <FontFamily>Angsana New</FontFamily>
+                      <FontSize>12pt</FontSize>
+                      <FontWeight>Normal</FontWeight>
+                      <Format>0.00;(0.00)</Format>
+                      <TextDecoration>None</TextDecoration>
+                      <Color>#000000</Color>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <HangingIndent>0.5in</HangingIndent>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                  <LineHeight>12pt</LineHeight>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>เงินฝากสัจจะที่ฝากไว้กับผู้ให้กู้หรือผู้กู้หรือทายาทของผู้กู้ มีสิทธิได้รับผลประโยชน์ตอบแทนใดๆจากผู้ให้กู้ ผู้กู้ตกลงยินยอมให้ผู้ให้กู้หักเงินที่มีอยู่หรือที่จะได้รับนั้นเพื่อเป็นการชำระหนี้ผู้กู้ค้างชำระได้ทันทีโดยไม่จำเป็นต้องได้รับความยินยอมจากผู้กู้ก่อนแต่อย่างใด</Value>
+                    <Style>
+                      <FontStyle>Normal</FontStyle>
+                      <FontFamily>Angsana New</FontFamily>
+                      <FontSize>12pt</FontSize>
+                      <FontWeight>Normal</FontWeight>
+                      <Format>0.00;(0.00)</Format>
+                      <TextDecoration>None</TextDecoration>
+                      <Color>#000000</Color>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                  <LineHeight>12pt</LineHeight>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>ข้อ 12.) ในกรณีที่ผู้ให้กู้ติดต่อผู้กู้ไม่ได้ ไม่ว่าด้วยเหตุใดๆก็ตาม ผู้กู้ยินยอมให้ผู้ให้กู้ติดต่อกับบุคคลในครอบครัว</Value>
+                    <Style>
+                      <FontStyle>Normal</FontStyle>
+                      <FontFamily>Angsana New</FontFamily>
+                      <FontSize>12pt</FontSize>
+                      <FontWeight>Normal</FontWeight>
+                      <Format>0.00;(0.00)</Format>
+                      <TextDecoration>None</TextDecoration>
+                      <Color>#000000</Color>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <HangingIndent>0.5in</HangingIndent>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                  <LineHeight>12pt</LineHeight>
+                </Style>
+              </Paragraph>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>หรือญาติของผู้กู้หรือบุคคลอื่นเพื่อแจ้งให้ผู้กู้นำเงินมาชำระคืนผู้ให้กู้ได้ผู้กู้และคู่สัญญา ผู้ที่เกี่ยวข้องทุกฝ่าย ได้อ่านข้อความในสัญญากู้ฉบับบนี้โดยตลอดแล้ว เห็นว่าถูกต้องครบถ้วนตามความประสงค์ จึงลงลายมือชื่อไว้เป็นหลักฐาน ณ วัน เดือน ปี ที่ ระบุข้างต้น</Value>
+                    <Style>
+                      <FontStyle>Normal</FontStyle>
+                      <FontFamily>Angsana New</FontFamily>
+                      <FontSize>12pt</FontSize>
+                      <FontWeight>Normal</FontWeight>
+                      <Format>0.00;(0.00)</Format>
+                      <TextDecoration>None</TextDecoration>
+                      <Color>#000000</Color>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                  <LineHeight>12pt</LineHeight>
+                </Style>
+              </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox10</rd:DefaultName>
-            <Top>2.32154in</Top>
+            <Top>2.30766in</Top>
             <Left>0.86256in</Left>
             <Height>3.53126in</Height>
-            <Width>6.85333in</Width>
+            <Width>6.55125in</Width>
             <ZIndex>3</ZIndex>
             <Style>
               <Border>
@@ -1431,192 +1595,11 @@
               </Paragraph>
             </Paragraphs>
             <rd:DefaultName>Textbox11</rd:DefaultName>
-            <Top>7.25905in</Top>
+            <Top>5.90836in</Top>
             <Left>0.86256in</Left>
             <Height>1.26041in</Height>
             <Width>6.85333in</Width>
             <ZIndex>4</ZIndex>
-            <Style>
-              <Border>
-                <Style>None</Style>
-              </Border>
-              <PaddingLeft>2pt</PaddingLeft>
-              <PaddingRight>2pt</PaddingRight>
-              <PaddingTop>2pt</PaddingTop>
-              <PaddingBottom>2pt</PaddingBottom>
-            </Style>
-          </Textbox>
-          <Textbox Name="Textbox2">
-            <CanGrow>true</CanGrow>
-            <KeepTogether>true</KeepTogether>
-            <Paragraphs>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>ข้อ 9.) ในกรณีที่ผู้กู้เปลี่ยนชื่อตัว ชื่อสกุล หรือเปลี่ยนแปลงที่อยู่ หรือย้ายทะเบียนบ้าน ผู้กู้จะต้องแจ้งให้คณะกรรมการ</Value>
-                    <Style>
-                      <FontStyle>Normal</FontStyle>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>12pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                      <Format>0.00;(0.00)</Format>
-                      <TextDecoration>None</TextDecoration>
-                      <Color>#000000</Color>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style />
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>กองทุนฯทราบโดยเร็ว</Value>
-                    <Style>
-                      <FontStyle>Normal</FontStyle>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>12pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                      <Format>0.00;(0.00)</Format>
-                      <TextDecoration>None</TextDecoration>
-                      <Color>#000000</Color>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style>
-                  <TextAlign>Left</TextAlign>
-                  <LineHeight>12pt</LineHeight>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>ข้อ 10.) หากผู้กู้ผิดนัดงวดใดงวดหนึ่งหรือผิดสัญญาข้อหนึ่งข้อใดแห่งสัญญานี้ ผู้กู้ยินยอมให้ถือว่าผู้กู้ผิดนัดทั้งหมด</Value>
-                    <Style>
-                      <FontStyle>Normal</FontStyle>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>12pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                      <Format>0.00;(0.00)</Format>
-                      <TextDecoration>None</TextDecoration>
-                      <Color>#000000</Color>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <HangingIndent>0.5in</HangingIndent>
-                <Style>
-                  <TextAlign>Left</TextAlign>
-                  <LineHeight>12pt</LineHeight>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>ในสัญญานี้และยินยอมให้ผู้ให้กู้คิดดอกเบี้ยในระหว่างผิดนัดได้ ในอัตราสูงสุดที่ชอบด้วยกฎหมายนับแต่วันที่ผิดนัดเป็นต้นไปจนกว่าผู้กู้จะชำระหนี้คืนให้แก่ผู้ให้กู้ครบถ้วนสิ้นเชิงและผู้กู้ยินยอมชดใช้ค่าเสียหายทั้งปวงที่ผู้ให้กู้ต้องเสียไปในการบังคับให้ผู้กู้ชำระหนี้ตามสัญญานี้ ซึ่งรวมถึงค่าใช้จ่ายในการเตือน เรียกร้อง ทวงถาม การดำเนินคดีและการบังคับคดี</Value>
-                    <Style>
-                      <FontStyle>Normal</FontStyle>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>12pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                      <Format>0.00;(0.00)</Format>
-                      <TextDecoration>None</TextDecoration>
-                      <Color>#000000</Color>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style>
-                  <TextAlign>Left</TextAlign>
-                  <LineHeight>12pt</LineHeight>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>ข้อ 11.) ในกรณีที่ผู้กู้ผิดนัดชำระหนี้หรือผู้กู้เสียชีวิตและยังคงมีหนี้ค้างชำระกับทางผู้ให้กู้ หากผู้กู้มีเงินออม เงินหุ้น </Value>
-                    <Style>
-                      <FontStyle>Normal</FontStyle>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>12pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                      <Format>0.00;(0.00)</Format>
-                      <TextDecoration>None</TextDecoration>
-                      <Color>#000000</Color>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <HangingIndent>0.5in</HangingIndent>
-                <Style>
-                  <TextAlign>Left</TextAlign>
-                  <LineHeight>12pt</LineHeight>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>เงินฝากสัจจะที่ฝากไว้กับผู้ให้กู้หรือผู้กู้หรือทายาทของผู้กู้ มีสิทธิได้รับผลประโยชน์ตอบแทนใดๆจากผู้ให้กู้ ผู้กู้ตกลงยินยอมให้ผู้ให้กู้หักเงินที่มีอยู่หรือที่จะได้รับนั้นเพื่อเป็นการชำระหนี้ผู้กู้ค้างชำระได้ทันทีโดยไม่จำเป็นต้องได้รับความยินยอมจากผู้กู้ก่อนแต่อย่างใด</Value>
-                    <Style>
-                      <FontStyle>Normal</FontStyle>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>12pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                      <Format>0.00;(0.00)</Format>
-                      <TextDecoration>None</TextDecoration>
-                      <Color>#000000</Color>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style>
-                  <TextAlign>Left</TextAlign>
-                  <LineHeight>12pt</LineHeight>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>ข้อ 12.) ในกรณีที่ผู้ให้กู้ติดต่อผู้กู้ไม่ได้ ไม่ว่าด้วยเหตุใดๆก็ตาม ผู้กู้ยินยอมให้ผู้ให้กู้ติดต่อกับบุคคลในครอบครัว</Value>
-                    <Style>
-                      <FontStyle>Normal</FontStyle>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>12pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                      <Format>0.00;(0.00)</Format>
-                      <TextDecoration>None</TextDecoration>
-                      <Color>#000000</Color>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <HangingIndent>0.5in</HangingIndent>
-                <Style>
-                  <TextAlign>Left</TextAlign>
-                  <LineHeight>12pt</LineHeight>
-                </Style>
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>หรือญาติของผู้กู้หรือบุคคลอื่นเพื่อแจ้งให้ผู้กู้นำเงินมาชำระคืนผู้ให้กู้ได้ผู้กู้และคู่สัญญา ผู้ที่เกี่ยวข้องทุกฝ่าย ได้อ่านข้อความในสัญญากู้ฉบับบนี้โดยตลอดแล้ว เห็นว่าถูกต้องครบถ้วนตามความประสงค์ จึงลงลายมือชื่อไว้เป็นหลักฐาน ณ วัน เดือน ปี ที่ ระบุข้างต้น</Value>
-                    <Style>
-                      <FontStyle>Normal</FontStyle>
-                      <FontFamily>Angsana New</FontFamily>
-                      <FontSize>12pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                      <Format>0.00;(0.00)</Format>
-                      <TextDecoration>None</TextDecoration>
-                      <Color>#000000</Color>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style>
-                  <TextAlign>Left</TextAlign>
-                  <LineHeight>12pt</LineHeight>
-                </Style>
-              </Paragraph>
-            </Paragraphs>
-            <rd:DefaultName>Textbox2</rd:DefaultName>
-            <Top>5.8528in</Top>
-            <Left>0.86256in</Left>
-            <Height>1.40625in</Height>
-            <Width>6.85333in</Width>
-            <ZIndex>5</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
